# result

./: CMakeLists.txt
include/result/: result.hpp
test/: CMakeLists.txt  CheckStateTest.cpp  CreateResultTest.cpp  GetDataTest.cpp  OnErrorTest.cpp  ThenTest.cpp
